feature: added category and sub category form

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 .avatar-upload {
   position: relative;
   max-width: 195px;
-  margin: 30px auto;
+  // margin: 30px auto;
   .avatar-edit {
     position: absolute;
     right: 12px;
